# microspotai

./: README.md
assets/: Enregistrement2026-05-23172514-ezgif.com-video-to-gif-converter.gif:Zone.Identifier
microspot_description/: CMakeLists.txt  package.xml
microspot_description/config/: microspot_controllers.yaml
microspot_description/launch/: display.launch.py  display_spot_arm.launch.py
microspot_description/meshes/: BL_hip.stl  BL_thigh.stl  BL_thigh_cover.stl  BR_hip.stl  BR_knee.stl  BR_thigh-1.stl  BR_thigh_cover.stl  B_O_shoulder.stl  B_cover.stl  FL_foot.stl  FL_hip.stl  FL_knee.stl  FR_hip.stl  F_I_shoulder.stl  F_cover.stl  L_side_plate.stl  R_side_plate.stl  T_cover.stl  back_right_end_foot_dummy.stl  back_right_foot_end.stl  base_arm.stl  base_link.stl  front_left_end_foot_dummy.stl  gripper.stl  link_10.stl  link_3.stl  link_5.stl  link_6.stl  plate.stl  rotor_1.stl  rotor_5.stl  rotor_6.stl
microspot_description/rviz/: config.rviz  urdf_config.rviz
robot_arm_controller/: package.xml  setup.cfg  setup.py
spot_bringup/: CMakeLists.txt  package.xml
spot_controller/: package.xml  setup.py
spot_controller/spot_controller/: arm_controller.py  body_controller.py  chassis_control.py  chassis_move_done_by_stupid_dude.py  controller_node.py  gait_controller.py  gui.py  gui_arm.py  gui_controller.py  leg_ik_solver.py  pose_publisher_node.py  real_robot_hardware_bridge.py  rotate_controller.py  stabilizer.py  utils.py  walking_gait.py
spot_mapping/: package.xml  setup.cfg  setup.py
spot_sensors/: package.xml  setup.cfg  setup.py
(+48 files in other folders)
